[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-curator"
version = "0.1.0"
description = "LLM-assisted thematic curation for publication relevance review."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = []
dependencies = [
    "anthropic[vertex]>=0.107,<1",
    "google-genai>=1.72,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
cli_thematic_reviewer = "agentic_curator.cli.cli_thematic_reviewer:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agentic_curator = ["prompts/*.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
