# =============================================================================
# Authors
# =============================================================================
# Created by jaychowcl @ Saez-Rodriguez Group & GSK on June 2026
# https://github.com/jaychowcl
# https://saezlab.org
# https://www.gsk.com/
# =============================================================================

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-curator"
version = "0.1.0"
description = "LLM-assisted thematic curation for publication relevance review."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = []
dependencies = [
    "anthropic[vertex]>=0.107,<1",
    "google-genai>=1.72,<2",
    "rdflib>=7,<8",
    "requests>=2,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
build_ontology_cache = "agentic_curator.curators.ontology_harmonizer.cache_builder:main"
cli_thematic_reviewer = "agentic_curator.cli.cli_thematic_reviewer:main"
cli_ontology_harmonizer = "agentic_curator.cli.cli_ontology_harmonizer:main"
cli_query_generator = "agentic_curator.cli.cli_query_generator:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agentic_curator = ["curators/*/prompts/*.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
